# gemini-3-hackathon

./: .env.example  .gitignore  README.md  app.config.js  app.json  docker-compose.yml  global.d.ts  package-lock.json  package.json
app/: _layout.tsx  auth.tsx  onboarding.tsx
app/(tabs)/: _layout.tsx  chat.tsx  logs.tsx  market.tsx  onboarding.tsx  profile.tsx  settings.tsx
app/utils/: cache.ts
backend/: README.md
backend/mem0-setup-vm/: docker-compose.yaml
backend/mem0-vm-cloudrun/: .env.example  Dockerfile  main.py  requirements.txt
backend/preference-mongo-cloudrun/: .env.example  Dockerfile  main.py  requirements.txt
components/ui/: button.tsx  input.tsx  label.tsx
hooks/: use-jwt.ts  use-mcp-auth.ts
mcp-servers/google-workspace/: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  SETUP.md  docker-compose.yml  pyproject.toml  server.py
mcp-servers/travel/: .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  server.py
mcp-servers/uber/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  server.py
services/: api.ts  gemini.ts  jwt.ts  mcp-auth.ts  mcp-client.ts  preferences.ts  secure-storage.ts  session.ts
services/agents/: README.md  brain.ts  index.ts  memory.ts  soul.ts  types.ts
