[project]
name = "travel-mcp-server"
version = "1.0.0"
description = "Travel Search MCP Server using FastMCP and SerpApi"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0.0b1",
    "python-dotenv>=1.2.1",
    "httpx>=0.27.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
travel-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[tool.uv]
dev-dependencies = []
